WHS installer - use placeholders for version and executable - real values are replaced in build script - disable Windows version checking as long as we don't add any WHS specific code
git-svn-id: file:///home/awy/mirror/slim/7.3/trunk/platforms@24838 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/win32/installer/SqueezeCenter.wxs
+++ b/win32/installer/SqueezeCenter.wxs
@@ -4,7 +4,7 @@
 		Id="*"
 		UpgradeCode="{1db91230-ebbc-11dd-ba2f-0800200c9a66}"
 		Manufacturer="Logitech"
-		Version="7.3.3.0"
+		Version="0.0.0.0"
 		Language="1033">
 
 		<Package
@@ -16,7 +16,7 @@
 
 		<Property Id="WHSLogo">1</Property>
 
-		<Condition Message="[ProductName] requires Windows Home Server. For more information, please refer to the User Guide.">VersionNT = 502</Condition>
+<!--		<Condition Message="[ProductName] requires Windows Home Server. For more information, please refer to the User Guide.">VersionNT = 502</Condition> -->
 
 		<Directory Id="TARGETDIR" Name="SourceDir">
 			<Directory Id="ProgramFilesFolder">
@@ -38,7 +38,7 @@
 			/>
 		</Property>
 
-		<Binary Id="SCInstallerFile" SourceFile="SqueezeCenter-7.3.3-24779.exe" />
+		<Binary Id="SCInstallerFile" SourceFile="SqueezeSetup.exe" />
 		
 		<Feature Id="SCInstaller" Title="SqueezeCenter Installer" Level="1" AllowAdvertise="no" Display="hidden">
 			<ComponentRef Id="SqueezeCenter" />
