configure SC service to start automatically at boot time (WHS MSI only)
git-svn-id: file:///home/awy/mirror/slim/7.3/trunk/platforms@24962 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/win32/installer/SqueezeCenter.wxs
+++ b/win32/installer/SqueezeCenter.wxs
@@ -45,7 +45,7 @@
 		</Feature>
 
 		<CustomAction Id="InstallSC" BinaryKey="SCInstallerFile" ExeCommand="/silent" Impersonate="no" Return="ignore" Execute="deferred" />
-		<CustomAction Id="InstallSCService" Directory="APPLICATIONROOTDIRECTORY" ExeCommand='"[APPLICATIONROOTDIRECTORY]server\squeezecenter.exe" --install' Impersonate="no" Return="ignore" Execute="deferred" />
+		<CustomAction Id="InstallSCService" Directory="APPLICATIONROOTDIRECTORY" ExeCommand='"[APPLICATIONROOTDIRECTORY]server\squeezecenter.exe" --install auto' Impersonate="no" Return="ignore" Execute="deferred" />
 
 		<CustomAction Id="UnInstallSC" Directory="APPLICATIONROOTDIRECTORY" ExeCommand="[UNINSTALLCOMMAND]" Impersonate="no" Return="ignore" Execute="deferred" />
 		
