don't hard code installation path to use Windows default values, but use wherever SC had been installed. This should fix updating from previous SC version which didn't have WHS integration.
Bug: 11085
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@25026 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/win32/installer/SqueezeCenter.wxs
+++ b/win32/installer/SqueezeCenter.wxs
@@ -22,14 +22,15 @@
 <!--		<Condition Message="[ProductName] requires Windows Home Server. For more information, please refer to the User Guide.">VersionNT = 502</Condition> -->
 
 		<Directory Id="TARGETDIR" Name="SourceDir">
-			<Directory Id="ProgramFilesFolder">
-			
-				<Directory Id="APPLICATIONROOTDIRECTORY" Name="SqueezeCenter">
+			<Directory Id="APPLICATIONROOTDIRECTORY" Name="SqueezeCenter">
+				<Directory Id="APPPATH" Name=".">
 					<Component Id="SqueezeCenter" Guid="1DB91230-EBBC-11DD-BA2F-0800200C9A66">
 						<ServiceControl Id="SqueezeSvc" Name="squeezesvc" Start="install" />
 					</Component>
 				</Directory>
+			</Directory>
 
+			<Directory Id="ProgramFilesFolder">
 				<Directory Id="WHS" Name="Windows Home Server">
 					<Component
 						Id="HomeServerConsoleTab.SqueezePanel"
@@ -46,6 +47,16 @@
 				</Directory>
 			</Directory>
 		</Directory>
+
+		<Property Id="APPPATH">
+			<RegistrySearch
+				Id="Path" 
+				Root="HKLM"
+				Key="SOFTWARE\Logitech\SqueezeCenter"
+				Name="Path"
+				Type="raw"
+			/>
+		</Property>
 
 		<Property Id="UNINSTALLCOMMAND">
 			<RegistrySearch
