--- a/win32/installer/SqueezeCenter.wxs
+++ b/win32/installer/SqueezeCenter.wxs
@@ -19,14 +19,22 @@
 <!--		<Condition Message="[ProductName] requires Windows Home Server. For more information, please refer to the User Guide.">VersionNT = 502</Condition> -->
 
 		<Directory Id="TARGETDIR" Name="SourceDir">
-			<Directory Id="ProgramFilesFolder">
-				<Directory Id="APPLICATIONROOTDIRECTORY" Name="SqueezeCenter">
-					<Component Id="SqueezeCenter" Guid="{1DB91230-EBBC-11DD-BA2F-0800200C9A66}">
-						<ServiceControl Id="SqueezeSvc" Name="squeezesvc" Start="install" />
-					</Component>
-				</Directory>
+			<Directory Id="APPPATH" Name=".">
+				<Component Id="SqueezeCenter" Guid="{1DB91230-EBBC-11DD-BA2F-0800200C9A66}">
+					<ServiceControl Id="SqueezeSvc" Name="squeezesvc" Start="install" />
+				</Component>
 			</Directory>
 		</Directory>
+
+		<Property Id="APPPATH">
+			<RegistrySearch
+				Id="Path" 
+				Root="HKLM"
+				Key="SOFTWARE\Logitech\SqueezeCenter"
+				Name="Path"
+				Type="raw"
+			/>
+		</Property>
 
 		<Property Id="UNINSTALLCOMMAND">
 			<RegistrySearch
@@ -45,9 +53,9 @@
 		</Feature>
 
 		<CustomAction Id="InstallSC" BinaryKey="SCInstallerFile" ExeCommand="/silent" Impersonate="no" Return="ignore" Execute="deferred" />
-		<CustomAction Id="InstallSCService" Directory="APPLICATIONROOTDIRECTORY" ExeCommand='"[APPLICATIONROOTDIRECTORY]server\squeezecenter.exe" --install auto' Impersonate="no" Return="ignore" Execute="deferred" />
+		<CustomAction Id="InstallSCService" Directory="APPPATH" ExeCommand='"[APPPATH]server\squeezecenter.exe" --install auto' Impersonate="no" Return="ignore" Execute="deferred" />
 
-		<CustomAction Id="UnInstallSC" Directory="APPLICATIONROOTDIRECTORY" ExeCommand="[UNINSTALLCOMMAND]" Impersonate="no" Return="ignore" Execute="deferred" />
+		<CustomAction Id="UnInstallSC" Directory="APPPATH" ExeCommand="[UNINSTALLCOMMAND] /SUPPRESSMSGBOXES" Impersonate="no" Return="ignore" Execute="deferred" />
 		
 		<InstallExecuteSequence>
 			<Custom Action="InstallSC" After="InstallInitialize">
