--- a/win32/WHS Add-In/SqueezeCenter/installer.wxs
+++ b/win32/WHS Add-In/SqueezeCenter/installer.wxs
@@ -1,63 +1,67 @@
-﻿<?define version="0.0.0.7"?>
+﻿<?define version="125.0.0"?>
+<?define UpgradeCode = "862E6090-F6B6-11DD-87AF-0800200C9A66" ?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
-  <Product
-    Name="SqueezePanel"
-    Id="5FBE7B80-F692-11DD-87AF-0800200C9A66"
-    UpgradeCode="862E6090-F6B6-11DD-87AF-0800200C9A66"
-    Manufacturer="Michael Herger - Logitech SA"
-    Version="$(var.version)"
-    Language="1033">
+	<Product
+		Name="SqueezePanel 7.3.3 $(var.version)"
+		Id="*"
+		UpgradeCode="$(var.UpgradeCode)"
+		Manufacturer="Michael Herger - Logitech SA"
+		Version="$(var.version)"
+		Language="1033">
 
-    <Package
-      Manufacturer="Logitech"
-      InstallerVersion="200"
-      Languages="1033"
-      Id="*"
-      Compressed="yes" />
+		<Package
+			Manufacturer="Logitech"
+			InstallerVersion="200"
+			Languages="1033"
+			Compressed="yes" />
 
-    <Media Id="1" Cabinet="SqueezePanel.$(var.version).cab" EmbedCab="yes" />
+		<Media Id="1" Cabinet="SqueezePanel.cab" EmbedCab="yes" />
+		
+		<Property Id="WHSLogo">1</Property>
 
-    <Property Id="WHSLogo">1</Property>
+		<Directory Id="TARGETDIR" Name="SourceDir">
+			<Directory Id="ProgramFilesFolder" Name="PFiles">
+				<Directory Id="WHS" Name="Windows Home Server">
 
-    <Condition Message="[ProductName] requires Windows Home Server. For more information, please refer to the User Guide.">VersionNT = 502</Condition>
+					<Component
+						Id="HomeServerConsoleTab.SqueezePanel"
+						Guid="7f25fe10-f77a-11dd-87af-0800200c9a66">
 
-    <Directory
-      Id="TARGETDIR" Name="SourceDir">
-      <Directory Id="ProgramFilesFolder" Name="PFiles">
-        <Directory Id="WHS" Name="Windows Home Server">
+						<File
+							Id="HomeServerConsoleTab.SqueezeCenter.dll"
+							Name="HomeServerConsoleTab.SqueezeCenter.dll"
+							Source="bin\Release\HomeServerConsoleTab.SqueezeCenter.dll"
+							Vital="yes"
+							KeyPath="yes"
+							DiskId="1"/>
+					</Component>
 
-          <Component
-            Id="HomeServerConsoleTab.SqueezePanel"
-            Guid="7f25fe10-f77a-11dd-87af-0800200c9a66">
+				</Directory>
+			</Directory>
+		</Directory>
 
-            <File
-              Id="HomeServerConsoleTab.SqueezeCenter.dll"
-              Name="HomeServerConsoleTab.SqueezeCenter.dll"
-              Source="bin\Release\HomeServerConsoleTab.SqueezeCenter.dll"
-              Vital="yes"
-              KeyPath="yes"
-              DiskId="1"/>
-          </Component>
+		<Feature Id="ProductFeature" Title="SqueezePanel" Level="1">
+			<ComponentRef Id="HomeServerConsoleTab.SqueezePanel" />
+		</Feature>
 
-        </Directory>
-      </Directory>
-    </Directory>
+		<Property Id="OLDERVERSIONBEINGUPGRADED" Secure="yes" />
+		<Property Id="NEWERVERSIONDETECTED" Secure="yes" />
+		
+		<Upgrade Id="$(var.UpgradeCode)">
+			<UpgradeVersion Minimum="$(var.version)" 
+							IncludeMinimum="no" 
+							OnlyDetect="yes" 
+							Property="NEWERVERSIONDETECTED" />
+			<UpgradeVersion Minimum="0.0.0" 
+							Maximum="$(var.version)"
+							IncludeMinimum="yes"
+							IncludeMaximum="no"
+							Property="OLDERVERSIONBEINGUPGRADED" />
+		</Upgrade>
 
-    <Feature Id="ProductFeature" Title="SqueezePanel" Level="1">
-      <ComponentRef Id="HomeServerConsoleTab.SqueezePanel" />
-    </Feature>
-
-    <Upgrade Id='862E6090-F6B6-11DD-87AF-0800200C9A66'>
-      <UpgradeVersion
-        Property='OLDVERSIONFOUND'
-        IncludeMinimum='yes'
-        Minimum='0.0.0.0' />
-    </Upgrade>
-
-    <InstallExecuteSequence>
-      <LaunchConditions After='AppSearch' />
-      <RemoveExistingProducts After='InstallValidate' />
-    </InstallExecuteSequence>
-  </Product>
+		<InstallExecuteSequence>
+			<RemoveExistingProducts After="InstallValidate" />
+		</InstallExecuteSequence>
+	</Product>
 
 </Wix>
