git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@26316 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/win32/installer/SqueezeCenter.wxs
+++ b/win32/installer/SqueezeCenter.wxs
@@ -47,6 +47,19 @@
 							KeyPath="yes"
 							DiskId="1"/>
 					</Component>
+					
+					<Component
+						Id="Jayrock.Json"
+						Guid="c430a0d0-3584-11de-b418-0800200c9a66">
+					
+						<File
+							Id="Jayrock.Json.dll"
+							Name="Jayrock.Json.dll"
+							Source="Jayrock.Json.dll"
+							Vital="yes"
+							KeyPath="yes"
+							DiskId="1"/>
+					</Component>
 				</Directory>
 			</Directory>
 		</Directory>
@@ -79,6 +92,7 @@
 		
 		<Feature Id="ProductFeature" Title="SqueezePanel" Level="1" AllowAdvertise="no">
 			<ComponentRef Id="HomeServerConsoleTab.SqueezePanel" />
+			<ComponentRef Id="Jayrock.Json" />
 		</Feature>
 		
 		<CustomAction Id="InstallSC" BinaryKey="SCInstallerFile" ExeCommand="/silent" Impersonate="no" Return="ignore" Execute="deferred" />
