move SC service installation from WHS .msi installer to common installer. This should fix an issue where SC wouldn't start on a very initial installation on WHS.
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@26367 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/win32/installer/SqueezeCenter.wxs
+++ b/win32/installer/SqueezeCenter.wxs
@@ -95,8 +95,7 @@
 			<ComponentRef Id="Jayrock.Json" />
 		</Feature>
 		
-		<CustomAction Id="InstallSC" BinaryKey="SCInstallerFile" ExeCommand="/silent /noTrayIcon" Impersonate="no" Return="ignore" Execute="deferred" />
-		<CustomAction Id="InstallSCService" Directory="APPPATH" ExeCommand='"[APPPATH]server\squeezecenter.exe" --install auto' Impersonate="no" Return="ignore" Execute="deferred" />
+		<CustomAction Id="InstallSC" BinaryKey="SCInstallerFile" ExeCommand="/silent /noTrayIcon /installService" Impersonate="no" Return="ignore" Execute="deferred" />
 
 		<CustomAction Id="UnInstallSC" Directory="APPPATH" ExeCommand="[UNINSTALLCOMMAND] /SUPPRESSMSGBOXES" Impersonate="no" Return="ignore" Execute="deferred" />
 		
@@ -111,10 +110,6 @@
 			<RemoveExistingProducts After="InstallValidate" />
 
 			<Custom Action="InstallSC" After="InstallInitialize">
-				NOT REMOVE="ALL"
-			</Custom>
-
-			<Custom Action="InstallSCService" After="InstallSC">
 				NOT REMOVE="ALL"
 			</Custom>
 
