fix uninstaller path
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@27148 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/win32/installer/SqueezeCenter.wxs
+++ b/win32/installer/SqueezeCenter.wxs
@@ -78,7 +78,7 @@
 			<RegistrySearch
 				Id="QuietUninstallString" 
 				Root="HKLM"
-				Key="SOFTWARE\Microsoft\Windows\CurrentVersion\Uninstall\Squeezebox_is1"
+				Key="SOFTWARE\Microsoft\Windows\CurrentVersion\Uninstall\Squeezebox Server_is1"
 				Name="QuietUninstallString"
 				Type="raw"
 			/>
