capture Windows installer log file when launched silently from tray icon
Bug: 13407
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@28195 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/win32/installer/SqueezeCenter.wxs
+++ b/win32/installer/SqueezeCenter.wxs
@@ -95,7 +95,7 @@
 			<ComponentRef Id="Jayrock.Json" />
 		</Feature>
 		
-		<CustomAction Id="InstallSC" BinaryKey="SCInstallerFile" ExeCommand="/silent /noTrayIcon /installService" Impersonate="no" Return="ignore" Execute="deferred" />
+		<CustomAction Id="InstallSC" BinaryKey="SCInstallerFile" ExeCommand="/Log /silent /noTrayIcon /installService" Impersonate="no" Return="ignore" Execute="deferred" />
 
 		<CustomAction Id="UnInstallSC" Directory="APPPATH" ExeCommand="[UNINSTALLCOMMAND] /SUPPRESSMSGBOXES" Impersonate="no" Return="ignore" Execute="deferred" />
 		
