Bug 13327: Update the readynas final packaging scripts. Remove some extra files, adjust directories and filenames to squeezeboxserver name. Remove unneeded copy of /etc/init.d/squeezebox.
Bug: 13327
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@28205 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/readynas/squeezeboxserver_addon_i386/SqueezeboxServer/addons.tmpl
+++ b/readynas/squeezeboxserver_addon_i386/SqueezeboxServer/addons.tmpl
@@ -1,1 +1,1 @@
-SLIMSERVER!!Squeezebox Server!!VERSION!!/etc/init.d/squeezebox start!!/etc/init.d/squeezebox stop
+SLIMSERVER!!Squeezebox Server!!VERSION!!/etc/init.d/squeezeboxserver start!!/etc/init.d/squeezeboxserver stop
