--- a/readynas/squeezeboxserver_addon_sparc/SqueezeboxServer/addons.tmpl
+++ b/readynas/squeezeboxserver_addon_sparc/SqueezeboxServer/addons.tmpl
@@ -1,1 +1,1 @@
-SLIMSERVER!!Squeezebox Server!!VERSION!!/etc/init.d/squeezebox start!!/etc/init.d/squeezebox stop
+SLIMSERVER!!Squeezebox Server!!VERSION!!/etc/init.d/squeezeboxserver start!!/etc/init.d/squeezeboxserver stop
