--- a/win32/installer/SqueezeCenter.wxs
+++ b/win32/installer/SqueezeCenter.wxs
@@ -2,7 +2,7 @@
 <?define UpgradeCode = "1DB91230-EBBC-11DD-BA2F-0800200C9A66" ?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
 	<Product
-		Name="Squeezebox Server 7.6.1-!!revision!! for Windows Home Server"
+		Name="Logitech Media Server 7.6.1-!!revision!! for Windows Home Server"
 		Id="*"
 		UpgradeCode="$(var.UpgradeCode)"
 		Manufacturer="Logitech"
@@ -20,7 +20,7 @@
 		<Property Id="WHSLogo">1</Property>
 
 		<Condition Message="[ProductName] requires Windows Home Server. For more information, please refer to the User Guide.">VersionNT = 502</Condition>
-		<Condition Message="Another version of Squeezebox Server is already installed. Please uninstall before updating.">NOT OTHERVERSIONDETECTED</Condition>
+		<Condition Message="Another version of Logitech Media Server is already installed. Please uninstall before updating.">NOT OTHERVERSIONDETECTED</Condition>
 
 		<Directory Id="TARGETDIR" Name="SourceDir">
 			<Directory Id="APPPATH" Name=".">
@@ -78,7 +78,7 @@
 			<RegistrySearch
 				Id="QuietUninstallString" 
 				Root="HKLM"
-				Key="SOFTWARE\Microsoft\Windows\CurrentVersion\Uninstall\Squeezebox Server_is1"
+				Key="SOFTWARE\Microsoft\Windows\CurrentVersion\Uninstall\Logitech Media Server_is1"
 				Name="QuietUninstallString"
 				Type="raw"
 			/>
@@ -86,7 +86,7 @@
 
 		<Binary Id="SCInstallerFile" SourceFile="SqueezeSetup.exe" />
 		
-		<Feature Id="SCInstaller" Title="Squeezebox Server Installer" Level="1" AllowAdvertise="no" Display="hidden">
+		<Feature Id="SCInstaller" Title="Logitech Media Server Installer" Level="1" AllowAdvertise="no" Display="hidden">
 			<ComponentRef Id="SqueezeboxServer" />
 		</Feature>
 		
