--- a/readynas/squeezeboxserver_addon_i386/SqueezeboxServer/addons.tmpl
+++ b/readynas/squeezeboxserver_addon_i386/SqueezeboxServer/addons.tmpl
@@ -1,1 +1,1 @@
-SLIMSERVER!!Squeezebox Server!!VERSION!!/etc/init.d/squeezeboxserver start!!/etc/init.d/squeezeboxserver stop
+SLIMSERVER!!Logitech Media Server!!VERSION!!/etc/init.d/squeezeboxserver start!!/etc/init.d/squeezeboxserver stop
